# thesis

./: .gitignore  AGENTS.md  HOW_TO_RUN.md  README.md  RUN_PROJECT.ps1  RUN_TESTS.ps1  requirements.txt
.codex/skills/story-backend-pipeline/: SKILL.md
.codex/skills/story-backend-pipeline/agents/: openai.yaml
.codex/skills/story-backend-pipeline/references/: backend-map.md  pipeline-guardrails.md
.codex/skills/story-contract-sync/: SKILL.md
.codex/skills/story-contract-sync/agents/: openai.yaml
.codex/skills/story-contract-sync/references/: contracts.md
.codex/skills/story-frontend-ui/: SKILL.md
backend/: .env.example  AGENTS.md  pyproject.toml
backend/app/: __init__.py  config.py  database.py  deps.py  logging_utils.py  main.py  models.py  schemas.py  security.py
backend/app/routers/: auth.py  stories.py
backend/app/services/: __init__.py  agents.py  gemini.py  orchestrator.py
backend/tests/: conftest.py  fakes.py  support.py  test_agents.py  test_api.py  test_auth_api.py  test_gemini.py  test_orchestrator.py  test_story_api.py
frontend/: AGENTS.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
frontend/app/: globals.css  layout.tsx
frontend/app/stories/[storyId]/: page.tsx
frontend/components/: auth-panel.test.tsx  auth-panel.tsx  dashboard.test.tsx  dashboard.tsx  story-composer.test.tsx  story-composer.tsx  story-detail-view.test.tsx  story-detail-view.tsx  story-highlights.test.tsx  story-highlights.tsx  story-library.test.tsx  story-library.tsx
frontend/lib/: api.test.ts  api.ts  format.ts  types.ts
(+3 files in other folders)
